# gnosis

./: Cargo.toml  db.sql
src/: command_service.rs  database.rs  datatypes.rs  db_operations.rs  errorhandler.rs  main.rs  snippet_service.rs
