[package]
name = "gnosis"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-postgres = "0.7.2"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"